<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/button_inches_to_cm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_one" />

        <Button
            android:id="@+id/button_tap_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_two"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/button_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_three"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/button_explicit_intent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_four"
            android:layout_marginTop="12dp" />

        <Button
            android:id="@+id/button_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problem_five"
            android:layout_marginTop="12dp" />
    </LinearLayout>
</ScrollView>
